# IEC61850_Qt

./: .gitignore  README.md  SITIPE config.xlsm
examples/QtWidgets/: Qt6CMake-main - Verknüpfung (2).lnk  Qt6CMake-main - Verknüpfung (3).lnk  Qt6CMake-main - Verknüpfung.lnk
examples/QtWidgets/Qt6CMake-main/: CMakeLists.txt
examples/QtWidgets/Qt6CMake-main/forms/: mainwindow.ui
examples/QtWidgets/Qt6CMake-main/include/: IEC104.h  helper.h  iec61850_control.h  mainwindow.h  sitipe_master.h  sitipe_slave.h  ui_mainwindow.h
examples/QtWidgets/Qt6CMake-main/libiec61850/lib/: hal-shared.lib  hal.lib  iec61850.lib
examples/QtWidgets/Qt6CMake-main/pic/: icons.qrc  icons.rcc
examples/QtWidgets/Qt6CMake-main/src/: IEC104.cpp  SITIPE_MS.lua  helper.cpp  iec61850_control.cpp  main.cpp  mainwindow.cpp  sitipe_master.cpp  sitipe_slave.cpp
